# Tradingview-strategy

./: .env  Dockerfile  ETH_BTC_MTF_LIVE.py  README.md  docker_entrypoint.sh  healthcheck.sh  multi_market_ema_strategy.pine  mypy.ini  pyproject.toml  requirements.txt  strategies.json  strategy_config.py
.github/workflows/: ci.yml
tests/: test_indicators.py  test_trade_flow.py
